--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+  width:0px;
+  /* background: #222222;
+  color: rgb(199 210 254); */
+}
+
 /* 
 * {
   border: 1px solid black;
